# milady-pool

./: .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml
contracts/: .gitmodules  foundry.toml  remappings.txt
contracts/script/: MiladyPoolDeployer.s.sol  V4Deployer.s.sol
contracts/script/utils/: HookMiner.sol  Utils.sol
contracts/src/: ERC20Mock.sol  MiladyPoolOrderManager.sol  MiladyPoolRouter.sol  MiladyPoolServiceManager.sol  MiladyPoolTaskManager.sol
contracts/src/_zk/: MiladyPoolTaskManager.sol
contracts/src/base/: Hook.sol  Order.sol  Structs.sol  WyvernInspired.sol
contracts/src/interfaces/: IMiladyPoolOrderManager.sol  (+1 more)
contracts/test/: MiladyPoolOrderManager.t.sol
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
operator/: .env.example  api.ts  codegen.ts  nodemon.json  package.json  server.ts  tsconfig.json
operator/.build/: api.js
operator/@types/: minipass-fetch.d.ts
operator/config/: cors.ts  server.ts
operator/prisma/: schema.prisma
operator/scripts/: registerOperator.ts  runSingleton.ts  setupEnv.ts
operator/utils/: import-graphql.ts  network.ts
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
server/: 404.html  Cargo.toml  index.html
server/src/: lib.rs
src/: MiladyPoolServiceManager.sol  MiladyPoolTaskManager.sol
src/interfaces/: IMiladyPoolTaskManager.sol
ui/: codegen.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ui/@types/: global.d.ts  graphql.d.ts  helpers.d.ts
zk-contracts/src/: README.md
(+78 files in other folders)
