[workspace]
members = [
    "lib",
    "program",
    "script",
    "server",
]

resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
ethereum-types = "=0.14.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }