[package]
version = "0.1.0"
name = "milady-pool-script"
edition = "2021"
default-run = "fibonacci" # Need to change this

[[bin]]
name = "fibonacci" # Need to change this
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "1.1.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
serde = { workspace = true }
serde_json = {workspace = true }
alloy-sol-types = { workspace = true }
ethereum-types = { workspace = true }
milady-pool-lib = { path = "../lib" } 

[build-dependencies]
sp1-helper = "1.1.0"