[package]
version = "0.1.0"
name = "milady-pool-server"
edition = "2021"

[[bin]]
name = "server"
path = "bin/main.rs"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
milady-pool-lib = { path = "../lib" }
serde = { workspace = true }
serde_json = { workspace = true }